# watch-next-backend

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: main.rs
src/api/: errors.rs  mod.rs
src/api/handlers/: auth.rs  root.rs
src/api/models/: auth.rs
src/api/services/: auth.rs
src/logger/: logger.rs  mod.rs
src/logger/enums/: category.rs  log_level.rs  mod.rs
